# ECGBench

./: .env.example  .gitignore  ADD_DATASET_TODO.md  CLAUDE.md  CLI_PLAN.md  README.md  pyproject.toml  webiste_paln_todo.md
.github/workflows/: deploy-hf-space.yml  deploy-pages.yml  publish-pypi.yml
docs/: _config.yml  _version.json  index.html
docs/_data/: columns.yml  statuses.yml  tables.yml
docs/_datasets/: apnea-ecg-database.md  bidmc-congestive-heart-failure-database.md  brno-university-of-technology-ecg-quality-database-but-qdb.md  brugada-huca.md  chapman-shaoxing-arrhythmia.md  chapman-shaoxing-ecg-database-10-646-patients.md  cipa-ecg-validation-study.md  code-15-pct-telehealth-network-of-minas-gerais-15-pct-subset.md  code-full-dataset-2-3m-records.md  code-test-827-record-hold-out-test-set.md  cpsc-2018-china-physiological-signal-challenge-2018.md  ecg-capable-smartwatches-dataset.md  ecg-effects-of-dofetilide-moxifloxacin-and-combinations-ecgdmmld.md  ecg-effects-of-ranolazine-dofetilide-verapamil-quinidine-ecgrdvq.md  ecg-id-database.md  echonext.md  edgar-experimental-data-and-geometric-analysis-repository.md  european-st-t-database-edb.md  eye-tracking-dataset-for-12-lead-ecg-interpretation.md  gu-ecg-gazi-university-ptca-induced-ischaemia.md  harvard-emory-ecg-database-heedb.md  icentia11k-single-lead-continuous-ecg.md  ikem-dataset-institute-for-clinical-and-experimental-medicine-prague.md  kurias-ecg.md  leipzig-heart-center-ecg-database.md  lobachevsky-university-ecg-database-ludb.md  long-term-af-database-ltafdb.md  long-term-st-database-ltstdb.md  medalcare-xl-synthetic-12-lead-ecgs-from-simulations.md  mhd-effect-on-12-lead-ecgs-in-mri-scanners.md  mimic-iii-waveform-database-matched-subset.md  mimic-iv-ecg-demo.md  mimic-iv-ecg-ext-icd.md  mimic-iv-ecg.md  mit-bih-arrhythmia-database.md  mit-bih-atrial-fibrillation-database.md  mit-bih-normal-sinus-rhythm-database.md  mit-bih-st-change-database.md  mit-bih-supraventricular-arrhythmia-database.md  nightingale-bwh-emergency-dept-ecg-dataset.md  (+24 more)
docs/_includes/cells/: access.html  dataset.html  format.html  num.html  origin.html  paper.html  patients.html  records.html  status.html
docs/_includes/sections/: code.html  description.html  links.html  notebook.html  plot.html  table.html
docs/_layouts/: dataset.html
docs/assets/: dataset.css
ecgbench/: __init__.py  catalogue.py  config.py  croissant.py  dataset.py  download.py
ecgbench/cli/: __init__.py  _main.py  croissant.py  splits.py  upload.py
ecgbench/data/configs/: _template.yaml  chapman_shaoxing.yaml  ptbxl.yaml
ecgbench/datasets/ptbxl/test/: fold_10.csv
ecgbench/datasets/ptbxl/train/: fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv
ecgbench/datasets/ptbxl/val/: fold_9.csv
ecgbench/splitting/: __init__.py  base.py  engine.py  export.py  registry.py
ecgbench/splitting/strategies/: __init__.py  chapman.py  generic.py  ptbxl.py
ecgbench/validation/: __init__.py  checks.py  engine.py  report.py
examples/: load_ptbxl.py
hf_space/: README.md
scripts/: generate_croissant.py  generate_splits.py  get_ptbxl_fold_csv.py  test_hugginface_data.py  test_ptbxl.py  upload_to_huggingface.py
tests/: conftest.py  test_cli.py  test_config.py  test_croissant.py  test_dataset.py  test_download.py  test_export.py  test_splitting.py  test_validation.py
