[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ecgbench"
dynamic = ["version"]
description = "Reproducible ECG Benchmark data from Open access datasets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vajira Thambawita"}
]
keywords = ["ecg", "benchmark", "dataset", "electrocardiogram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=1.9.0",
    "wfdb>=4.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "huggingface_hub>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/vajira/ECGBench"
Repository = "https://github.com/vajira/ECGBench"
Issues = "https://github.com/vajira/ECGBench/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ecgbench/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["ecgbench"]

[tool.hatch.build.targets.sdist]
include = ["ecgbench/**"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py38"]

